--- a/test.html
+++ b/test.html
@@ -71,13 +71,14 @@ void main() {
   // defaults to 1.0. Sampling the alpha channel would therefore always yield
   // 1.0 and result in the raw camera feed without any overlay. Use the red
   // channel to read the actual mask probability values.
-  float probability = texture(mask, coord).r;
+  float probability = 1.0;
   if (probability > 0.5) {
     out_color = vec4(src_color.rgb, 1.0);
   } else {
     vec4 purple = vec4(0.365, 0.247, 0.827, 1.0);
     out_color = 0.5 * purple + 0.5 * src_color;
   }
+  
 }`;
 
     class GlTextureImpl {
