--- a/test.html
+++ b/test.html
@@ -39,48 +39,17 @@
   <button id="startBtn">Start AR Segmentation</button>
   <div id="info">Status: idle</div>
   <div id="glInfo"></div>
-
-  <script>
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
+    import { EffectComposer } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/postprocessing/EffectComposer.js';
+    import { RenderPass } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/postprocessing/RenderPass.js';
     // Global state variables. They are initialized only after the DOM is
     // fully ready to avoid accessing elements before they exist.
       let model, gl, session, glBinding;
     let processingLock, fpsHistory;
     let applyMask;
 
-    // ---- GPU mask post-processing utilities (adapted from tfjs-examples/gpu-pipeline) ----
-    const PASSTHROUGH_VERTEX_SHADER = `#version 300 es
-precision highp float;
-in vec4 position;
-in vec4 input_tex_coord;
-out vec2 tex_coord;
-void main() {
-  gl_Position = position;
-  tex_coord = input_tex_coord.xy;
-}`;
-
-    const MASK_SHADER = `#version 300 es
-precision mediump float;
-uniform sampler2D frame;
-uniform sampler2D mask;
-in highp vec2 tex_coord;
-out vec4 out_color;
-void main() {
-  vec2 coord = vec2(1.0 - tex_coord[0], tex_coord[1]);
-  vec4 src_color = texture(frame, coord).rgba;
-  // The mask texture is a single-channel (R) image where the alpha channel
-  // defaults to 1.0. Sampling the alpha channel would therefore always yield
-  // 1.0 and result in the raw camera feed without any overlay. Use the red
-  // channel to read the actual mask probability values.
-  float probability = texture(mask, coord).r;
-  vec4 purple = vec4(0.365, 0.247, 0.827, 1.0);
-  if (probability > 0.5) {
-    out_color = vec4(255.0, 255.0, 255.0, 255.0);
-  } else {
-    out_color = vec4(255.0, 255.0, 255.0, 255.0);
-  }
-  
-}`;
-
+    // ---- GPU utilities ----
     class GlTextureImpl {
       constructor(gl, texture, width, height) {
         this.gl_ = gl;
@@ -104,84 +73,53 @@ void main() {
       }
     }
 
-    class GlProgramImpl {
-      constructor(gl, program) {
-        this.gl_ = gl;
-        this.program_ = program;
-        this.cachedUniformLocations_ = new Map();
-      }
-      useProgram() {
-        this.gl_.useProgram(this.program_);
-      }
-      getUniformLocation(symbol) {
-        if (!this.cachedUniformLocations_.has(symbol)) {
-          const loc = this.gl_.getUniformLocation(this.program_, symbol);
-          this.cachedUniformLocations_.set(symbol, loc);
-        }
-        return this.cachedUniformLocations_.get(symbol);
-      }
-    }
-
-    class FullscreenQuad {
-      constructor(gl) {
-        this.gl_ = gl;
-        this.squareBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.squareBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1, -1, 1, -1, -1, 1, 1, 1]), gl.STATIC_DRAW);
-        this.texBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.texBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([0,0,1,0,0,1,1,1]), gl.STATIC_DRAW);
-      }
-      draw() {
-        const gl = this.gl_;
-        gl.enableVertexAttribArray(0);
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.squareBuffer);
-        gl.vertexAttribPointer(0, 2, gl.FLOAT, false, 0, 0);
-        gl.enableVertexAttribArray(1);
-        gl.bindBuffer(gl.ARRAY_BUFFER, this.texBuffer);
-        gl.vertexAttribPointer(1, 2, gl.FLOAT, false, 0, 0);
-        gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-      }
-    }
-
-    class GlShaderProcessor {
-      constructor(gl, shader) {
-        this.gl = gl;
-        this.quad = new FullscreenQuad(gl);
-        this.program = createProgram(gl, PASSTHROUGH_VERTEX_SHADER, shader);
-      }
-      startProcessFrame(width, height) {
-        if (!this.frame || this.frame.width !== width || this.frame.height !== height) {
-          this.frame = createTextureFrameBuffer(this.gl, this.gl.LINEAR, width, height);
-        }
-        this.gl.viewport(0, 0, width, height);
-        this.program.useProgram();
-      }
-      bindTextures(textures) {
-        let unit = 0;
-        for (const [name, tex] of textures) {
-          const loc = this.program.getUniformLocation(name);
-          this.gl.activeTexture(this.gl.TEXTURE0 + unit);
-          tex.bindTexture();
-          this.gl.uniform1i(loc, unit);
-          unit++;
-        }
-      }
-      finalizeProcessFrame() {
-        this.frame.bindFramebuffer();
-        this.quad.draw();
-        return this.frame;
-      }
-    }
-
     class MaskStep {
       constructor(gl) {
-        this.proc = new GlShaderProcessor(gl, MASK_SHADER);
+        this.renderer = new THREE.WebGLRenderer({ context: gl, alpha: true });
+        this.renderer.autoClear = false;
+        this.scene = new THREE.Scene();
+        this.camera = new THREE.OrthographicCamera(-1, 1, 1, -1, 0, 1);
+
+        this.uniforms = {
+          frame: { value: new THREE.Texture() },
+          mask: { value: new THREE.Texture() }
+        };
+
+        const material = new THREE.ShaderMaterial({
+          uniforms: this.uniforms,
+          vertexShader: `varying vec2 vUv; void main(){ vUv = uv; gl_Position = vec4(position, 1.0); }`,
+          fragmentShader: `uniform sampler2D frame; uniform sampler2D mask; varying vec2 vUv; void main(){ vec2 coord = vec2(1.0 - vUv.x, vUv.y); vec4 src = texture2D(frame, coord); float prob = texture2D(mask, coord).r; vec4 purple = vec4(0.365, 0.247, 0.827, 1.0); gl_FragColor = mix(src, purple, step(0.5, prob)); }`,
+          depthWrite: false,
+          depthTest: false,
+          transparent: true
+        });
+
+        const quad = new THREE.Mesh(new THREE.PlaneGeometry(2, 2), material);
+        quad.renderOrder = 999;
+        this.scene.add(quad);
+
+        this.renderTarget = new THREE.WebGLRenderTarget(1, 1);
+        this.composer = new EffectComposer(this.renderer, this.renderTarget);
+        this.composer.addPass(new RenderPass(this.scene, this.camera));
       }
+
       process(frame, mask) {
-        this.proc.startProcessFrame(frame.width, frame.height);
-        this.proc.bindTextures([['frame', frame], ['mask', mask]]);
-        return this.proc.finalizeProcessFrame();
+        if (this.renderTarget.width !== frame.width || this.renderTarget.height !== frame.height) {
+          this.renderTarget.setSize(frame.width, frame.height);
+        }
+
+        const props = this.renderer.properties;
+        props.get(this.uniforms.frame.value).__webglTexture = frame.texture_;
+        props.get(this.uniforms.mask.value).__webglTexture = mask.texture_;
+        this.uniforms.frame.value.needsUpdate = false;
+        this.uniforms.mask.value.needsUpdate = false;
+
+        this.composer.render();
+
+        const gl = this.renderer.getContext();
+        const fb = props.get(this.renderTarget).__webglFramebuffer;
+        const tex = props.get(this.renderTarget.texture).__webglTexture;
+        return new GlTextureFramebuffer(gl, fb, tex, frame.width, frame.height);
       }
     }
 
@@ -202,23 +140,7 @@ void main() {
     function createTexture(gl, texture, width, height) {
       return new GlTextureImpl(gl, texture, width, height);
     }
-
-    function createProgram(gl, vertexSrc, fragmentSrc) {
-      const vs = gl.createShader(gl.VERTEX_SHADER);
-      gl.shaderSource(vs, vertexSrc);
-      gl.compileShader(vs);
-      const fs = gl.createShader(gl.FRAGMENT_SHADER);
-      gl.shaderSource(fs, fragmentSrc);
-      gl.compileShader(fs);
-      const program = gl.createProgram();
-      gl.attachShader(program, vs);
-      gl.attachShader(program, fs);
-      gl.bindAttribLocation(program, 0, 'position');
-      gl.bindAttribLocation(program, 1, 'input_tex_coord');
-      gl.linkProgram(program);
-      return new GlProgramImpl(gl, program);
-    }
-    // ---- End GPU mask utilities ----
+    // ---- End GPU utilities ----
 
     function log(msg) {
       console.error(msg);
