--- a/test.html
+++ b/test.html
@@ -57,6 +57,7 @@
     const modelUrl = 'https://vizbl-1.s3.eu-central-1.amazonaws.com/native/b617533f-d965-4782-8d22-c0574541b809.glb?version=1';
     const gltfLoader = new GLTFLoader();
     let gltfModel;
+    let reticle, hitTestSource;
 
       let model, gl, session, glBinding;
     let processingLock, fpsHistory;
@@ -216,12 +217,14 @@
         await loadModel();
 
         session = await navigator.xr.requestSession('immersive-ar', {
-          requiredFeatures: ['camera-access', 'dom-overlay'],
+          requiredFeatures: ['camera-access', 'dom-overlay', 'hit-test'],
           domOverlay: { root: document.body }
         });
 
         session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
         const referenceSpace = await session.requestReferenceSpace('local');
+        const viewerSpace = await session.requestReferenceSpace('viewer');
+        hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
         glBinding = new XRWebGLBinding(session, gl);
 
         renderer3D = new THREE.WebGLRenderer({ context: gl, alpha: true });
@@ -232,6 +235,12 @@
         camera3D = new THREE.PerspectiveCamera();
         camera3D.matrixAutoUpdate = false;
         applyMask = new MaskStep(renderer3D);
+
+        gltfLoader.load('https://immersive-web.github.io/webxr-samples/media/gltf/reticle/reticle.gltf', (gltf) => {
+          reticle = gltf.scene;
+          reticle.visible = false;
+          scene3D.add(reticle);
+        });
 
         // TensorFlow.js may provide an OffscreenCanvas as the WebGL backend's canvas.
         // OffscreenCanvas is not a DOM node and cannot be appended to the document,
@@ -246,12 +255,18 @@
         try {
           const gltf = await gltfLoader.loadAsync(modelUrl);
           gltfModel = gltf.scene;
-          gltfModel.position.set(0, 0, -1);
           gltfModel.scale.set(0.5, 0.5, 0.5);
-          scene3D.add(gltfModel);
         } catch (e) {
           log('Model load error: ' + e.message);
         }
+
+        session.addEventListener('select', () => {
+          if (gltfModel && reticle) {
+            const clone = gltfModel.clone();
+            clone.position.copy(reticle.position);
+            scene3D.add(clone);
+          }
+        });
 
         let lastFrameTime = performance.now();
 
@@ -311,6 +326,19 @@
               camera3D.matrix.fromArray(view.transform.matrix);
               camera3D.projectionMatrix.fromArray(view.projectionMatrix);
               camera3D.matrixWorldNeedsUpdate = true;
+
+              const hitTestResults = frame.getHitTestResults(hitTestSource);
+              if (hitTestResults.length > 0 && reticle) {
+                const hitPose = hitTestResults[0].getPose(referenceSpace);
+                reticle.visible = true;
+                reticle.position.set(
+                  hitPose.transform.position.x,
+                  hitPose.transform.position.y,
+                  hitPose.transform.position.z
+                );
+                reticle.updateMatrixWorld(true);
+              }
+
               renderer3D.render(scene3D, camera3D);
 
               const postTime = performance.now() - postStart;
